--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,10 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(DB
         main.cpp
         Vertex.cpp
+        Vertex.h
         cluster/VertexClusterImpl.cpp
         VertexRegistry.cpp
         utils.cpp
         lock/VertexLocker.cpp
-        lock/ClusterLocker.h
+        cluster/LocalVertexCluster.cpp
 )
