registry as shared lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,19 @@ project(DB)
 
 set(CMAKE_CXX_STANDARD 17)
 
+
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+
+add_library(registry SHARED
+        registry/Vertex.cpp
+        registry/cluster/VertexClusterImpl.cpp
+        registry/VertexRegistry.cpp
+        utils/string_utils.cpp
+        registry/lock/VertexLocker.cpp
+        registry/cluster/LocalVertexCluster.cpp)
+
 add_executable(DB
-        main.cpp
-        Vertex.cpp
-        Vertex.h
-        cluster/VertexClusterImpl.cpp
-        VertexRegistry.cpp
-        utils.cpp
-        lock/VertexLocker.cpp
-        cluster/LocalVertexCluster.cpp
+        database/main.cpp
+        registry/Vertex.cpp
 )
+target_link_libraries(DB PRIVATE registry)
