--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,33 +6,11 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
-add_library(cluster STATIC
-        registry/Vertex.cpp
-        cluster/VertexClusterImpl.cpp
-        cluster/LocalVertexCluster.cpp
-)
-
-add_library(registry STATIC
-        registry/Vertex.cpp
-        registry/VertexRegistry.cpp
-
-        registry/lock/VertexLocker.cpp
-
-        utils/string_utils.cpp
-        registry/lock/DoubleVertexLocker.cpp
-)
-
-target_link_libraries(registry PRIVATE cluster)
-
-add_executable(DB
-        database/main.cpp
-)
+add_subdirectory(utils)
+add_subdirectory(vertex)
+add_subdirectory(cluster)
+add_subdirectory(registry)
+add_subdirectory(database)
+add_subdirectory(node)
 
 add_executable(test main.cpp)
-
-add_executable(node
-        node/main.cpp
-        node/Server.cpp
-)
-
-target_link_libraries(DB PRIVATE registry)
