--- a/storage/CMakeLists.txt
+++ b/storage/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.25)
 
 add_library(cluster STATIC
-        VertexClusterImpl.cpp
-        LocalVertexCluster.cpp
+        VertexStorageImpl.cpp
+        LocalVertexStorage.cpp
 )
 target_link_libraries(cluster PRIVATE vertex)
