--- a/node/CMakeLists.txt
+++ b/node/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.25)
 
 add_executable(node
-        main.cpp
-        Server.cpp
+        run.cpp
+        NodeServer.cpp
 )
 
-target_link_libraries(node PRIVATE storage vertex utils)
+target_link_libraries(node PRIVATE server storage vertex utils)
