--- a/database/CMakeLists.txt
+++ b/database/CMakeLists.txt
@@ -1,7 +1,18 @@
 cmake_minimum_required(VERSION 3.25)
 
-add_executable(DB
-        main.cpp
+add_executable(DBStandalone
+        runStandalone.cpp
 )
 
-target_link_libraries(DB PRIVATE registry utils)
+add_executable(DBServer
+        DatabaseServer.cpp
+        runServer.cpp
+)
+
+add_executable(DBClient
+        runClient.cpp
+)
+
+target_link_libraries(DBStandalone PRIVATE registry utils)
+target_link_libraries(DBServer PRIVATE registry utils server)
+target_link_libraries(DBClient PRIVATE utils)
